# wie

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Optimization ROADMAP.md  README.md  codemap.md  phase3_plan.md  repomix-output.xml  repomix-output2.xml
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
.slim/: codemap.json
crates/: codemap.md
crates/wie-cli/: Cargo.toml  codemap.md
crates/wie-cli/src/: codemap.md  main.rs
crates/wie-cli/src/commands/: codemap.md  inspect.rs  mod.rs  run.rs  trace.rs  util.rs
crates/wie-cpu/: Cargo.toml  codemap.md
crates/wie-cpu/src/: codemap.md  exec.rs  iced_cpu.rs  lib.rs  mem.rs  regs.rs
crates/wie-cpu/src/jit/: block.rs  codemap.md  fast_api.rs  lower.rs  mod.rs  trampolines.rs
crates/wie-cpu/src/mem/: arena.rs  backend.rs  hashmap.rs  hybrid.rs  mmap_arena.rs  mmap_page.rs  mod.rs  oracle.rs  pagemap.rs  protect.rs  region.rs  vad.rs
crates/wie-pe/: Cargo.toml  codemap.md
crates/wie-pe/src/: codemap.md  lib.rs
crates/wie-runtime/: Cargo.toml  codemap.md
crates/wie-runtime/src/: codemap.md  guest_callback.rs  guest_heap_accel.rs  guest_io.rs  guest_mbwc.rs  guest_rewire.rs  guest_stubs.rs  hooks.rs  lib.rs  memory.rs  mt_runtime.rs  session.rs  trace.rs
crates/wie-runtime/tests/: micro_cli_args.rs  micro_heap_alloc.rs  micro_n1_suite.rs  micro_n2_files.rs  micro_vfs_roundtrip.rs
crates/wie-winapi/: Cargo.toml  codemap.md
crates/wie-winapi/src/: advapi32.rs  bottle.rs  codemap.md  comctl32.rs  comdlg32.rs  d3d9.rs  dispatch_table.rs  dll_loader.rs  dynamic_apis.rs  exception.rs  exception_helpers.rs  exception_tests.rs  fake_va.rs  gdi32.rs  guest_heap.rs  guest_io_host.rs  guest_memory.rs  guest_string.rs  idle.rs  kernel32.rs  lib.rs  mingw_dispatch.rs  msvc_eh.rs  ole32.rs  oleaut32.rs  seh.rs  shell32.rs  sync_obj.rs  thread.rs  ucrt.rs  user32.rs  uxtheme.rs  winmm.rs
crates/wie-winapi/src/vfs/: backend.rs  encoding.rs  mod.rs  path.rs  volume.rs
docs/: RUNBOOK.md  cpp-exceptions.md  mt-threads.md  phase0-baseline.md  phase2-mmap-backend.md  phase3-permissions.md  phase4-foundation.md  phase4-jit-coherency.md  phase4-region-pins.md  phase4-string-bulk.md  phase5.5-neon-cranelift.md  phase6-idle.md  phase7-hardening.md
docs/superpowers/plans/: 2026-07-22-mt-per-thread-engine.md
micro-exes/: Makefile
micro-exes/cli_args/: main.c  parse.c  parse.h
micro-exes/cpp_dtor/: main.cpp
micro-exes/cpp_exceptions/cpp_dtor/: main.cpp
micro-exes/cpp_exceptions/cpp_multi_catch/: main.cpp
micro-exes/cpp_exceptions/cpp_threads/: main.cpp
micro-exes/cpp_exceptions/cpp_throw/: main.cpp
micro-exes/cpp_throw/: main.cpp
micro-exes/cpp_types/: main.cpp
micro-exes/cpu_fp/: main.c
micro-exes/cpu_math/: main.c
micro-exes/cpu_string/: main.c
micro-exes/crt_hello/: main.c
micro-exes/cs_reenter/: main.c
micro-exes/cs_two_threads/: main.c
micro-exes/dll_tests/basic/: dll.c  main.c
micro-exes/dll_tests/multi_dll/: main.c
micro-exes/dll_tests/not_found/: main.c
micro-exes/dll_tests/ordinal/: dll.c  main.c
micro-exes/dll_tests/refcount/: dll.c  main.c
micro-exes/event_handshake/: main.c
micro-exes/heap_alloc/: main.c
micro-exes/heap_core/: main.c
micro-exes/interlocked_basic/: main.c
micro-exes/long_loop/: main.c
micro-exes/modules/: main.c
micro-exes/mt_stress/: main.c
micro-exes/process_ids/: main.c
micro-exes/read_file/: main.c
micro-exes/relative_path/: main.c
micro-exes/thread_create_join/: main.c
micro-exes/tls_basic/: main.c
micro-exes/vfs_roundtrip/: fixture_utf8.txt  main.c
micro-exes/winapi_heap/: main.c
micro-exes/write_file/: main.c
scripts/: check-jit-matrix.sh  check.sh  fetch-7za.sh  run-micro-suite.sh
