[package]
name = "wie-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

wie-pe = { path = "../wie-pe" }
wie-runtime = { path = "../wie-runtime" }
wie-winapi = { path = "../wie-winapi" }
wie-cpu = { path = "../wie-cpu" }
