[package]
name = "wie-winapi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
libc = "0.2"

wie-cpu = { path = "../wie-cpu" }

[lints]
workspace = true
